--- a/startup/src/main/resources/application-dev.yaml
+++ b/startup/src/main/resources/application-dev.yaml
@@ -1,2 +1,8 @@
 server:
   port: 8090
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/brss?useUnicode=true&characterEncoding=utf-8
+    username: root
+    password: root
