添加了部分模块之间的依赖，新建了model子模块

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>service</module>
         <module>dao</module>
         <module>startup</module>
+        <module>model</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
