--- a/user/pom.xml
+++ b/user/pom.xml
@@ -11,5 +11,21 @@
 
     <artifactId>user</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>jycz</groupId>
+            <artifactId>dao</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>jycz</groupId>
+            <artifactId>service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>jycz</groupId>
+            <artifactId>model</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
