--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,10 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <modules>
-        <module>user</module>
         <module>admin</module>
-        <module>utils</module>
-        <module>service</module>
-        <module>dao</module>
         <module>startup</module>
-        <module>model</module>
+        <module>user</module>
+        <module>common</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
