--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -12,5 +12,10 @@
     <artifactId>admin</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>jycz</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
