--- a/user/pom.xml
+++ b/user/pom.xml
@@ -10,6 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>user</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>jycz</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
