--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <version>2.2.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>jycz</groupId>
+    <groupId>com.jycz</groupId>
     <artifactId>brss</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>brss</name>
