--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
     <modules>
         <module>admin</module>
         <module>startup</module>
-        <module>user</module>
         <module>common</module>
+        <module>user-a</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -26,10 +26,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
