--- a/startup/pom.xml
+++ b/startup/pom.xml
@@ -18,7 +18,7 @@
         </dependency>
         <dependency>
             <groupId>com.jycz</groupId>
-            <artifactId>user</artifactId>
+            <artifactId>user-a</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
