--- a/user-a/pom.xml
+++ b/user-a/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>user</artifactId>
+    <artifactId>user-a</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.jycz</groupId>
@@ -17,5 +17,6 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
 
 </project>
