--- a/startup/src/main/resources/application-dev.yaml
+++ b/startup/src/main/resources/application-dev.yaml
@@ -6,3 +6,5 @@ spring:
     url: jdbc:mysql://localhost:3306/brss?useUnicode=true&characterEncoding=utf-8
     username: root
     password: root
+mybatis:
+  mapper-locations: classpath*:mappers/*.xml
