--- a/book/pom.xml
+++ b/book/pom.xml
@@ -9,21 +9,11 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>startup</artifactId>
+    <artifactId>book</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.jycz</groupId>
-            <artifactId>admin</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.jycz</groupId>
-            <artifactId>consumer</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.jycz</groupId>
-            <artifactId>book</artifactId>
+            <artifactId>common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
