图片路径成为相对的

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 ### Example user template template
 ### Example user template
 common/src/main/resources/img/
+img/
 # IntelliJ project files
 .idea
 *.iml
